# norri

./: .gitignore  LICENSE  README.md  norri.cabal  semantics.md  tmpcompiler.cabal
examples/: fib.cpp  fib.tmpc  gcd.cpp  gcd.tmpc  pointer.cpp  pointer.nri  y.cpp  y.nri  y.tmpc
examples/thesis/: ex1.nri  ex10.cpp  ex10.nri  ex11.cpp  ex11.nri  ex12.cpp  ex12.nri  ex2.nri  ex2a.cpp  ex2b.cpp  ex3.cpp  ex3.nri  ex4.nri  ex5.cpp  ex5.nri  ex6.cpp  ex6.nri  ex7.cpp  ex7.nri  ex8.cpp  ex8.nri  ex9.cpp  ex9.nri
runtime/: data.hpp  fix.hpp
runtime/noguard/: data.hpp  fix.hpp
src/: Default.hs  Main.hs  Options.hs  Report.hs  Utility.hs
src/Compiler/: AST.hs  Compile.hs  Lexer.hs  Parser.hs  Pretty.hs  Transform.hs
src/Compiler/TypeChecking/: Context.hs  Error.hs  Free.hs  Infer.hs  Scheme.hs  Subst.hs  Unify.hs
src/Compiler/TypeChecking/Infer/: Monad.hs
src/Cpp/: data.hpp  fix.hpp
