name:          norri
version:       0.1.1.0
synopsis:      C++ template metaprogramming language
description:
  A compiler that transform simple functional language into compile-time
  C++ program.
license:       BSD3
license-file:  LICENSE
author:        Vít Šefl
maintainer:    Vít Šefl <vituscze@gmail.com>
homepage:      https://github.com/vituscze/norri
category:      Language
build-type:    Simple
cabal-version: >= 1.8
tested-with:   GHC == 7.6.3
               GHC == 8.0.2

extra-source-files:
  *.md
  examples/*.cpp
  examples/*.nri
  runtime/*.hpp

source-repository head
  type: git
  location: git://github.com/vituscze/norri.git

executable norri
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall

  other-modules:
    Compiler.AST
    Compiler.Compile
    Compiler.Lexer
    Compiler.Parser
    Compiler.Pretty
    Compiler.Transform
    Compiler.TypeChecking.Context
    Compiler.TypeChecking.Error
    Compiler.TypeChecking.Free
    Compiler.TypeChecking.Infer
    Compiler.TypeChecking.Infer.Monad
    Compiler.TypeChecking.Subst
    Compiler.TypeChecking.Unify
    Default
    Options
    Report
    Utility

  build-depends:
    base >= 4.6,
    containers >= 0.5,
    filepath >= 1.3 && < 1.5,
    mtl >= 2.2 && < 2.3,
    optparse-applicative >= 0.9,
    parsec >= 3.1
