name:                tmpcompiler
version:             0.1.0.0
synopsis:            C++ template metaprogramming language
description:         A compiler that transform simple functional language into
                     compile-time C++ program.
license:             BSD3
license-file:        LICENSE
author:              Vít Šefl
maintainer:          Vít Šefl <vituscze@gmail.com>
copyright:           Vít Šefl, 2014
homepage:            https://github.com/vituscze/tmpcompiler
category:            Language
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/vituscze/tmpcompiler.git

executable tmpcompiler
  main-is: Main.hs
  hs-source-dirs: src
  -- other-modules:       
  build-depends:       base >= 4.6 && < 4.7,
                       containers >= 0.5 && < 0.6,
                       mtl >= 2.2 && < 2.3,
                       optparse-applicative >= 0.9 && < 0.10,
                       parsec >= 3.1 && < 3.2
